cherry pick cors fixes and last of swagger fix
Signed-off-by: Pablo Carle <pablo.carle@broadcom.com>